--- a/env.yml
+++ b/env.yml
@@ -1,11 +1,11 @@
-name: feddc_flower
+name: feddc_flower_nightly
 channels:
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
   - bzip2=1.0.8=h5eee18b_5
-  - ca-certificates=2023.12.12=h06a4308_0
+  - ca-certificates=2024.3.11=h06a4308_0
   - ld_impl_linux-64=2.38=h1181459_1
   - libffi=3.4.4=h6a678d5_0
   - libgcc-ng=11.2.0=h1234567_1
@@ -20,57 +20,34 @@ dependencies:
   - setuptools=68.2.2=py311h06a4308_0
   - sqlite=3.41.2=h5eee18b_0
   - tk=8.6.12=h1ccaba5_0
+  - tzdata=2024a=h04d1e81_0
   - wheel=0.41.2=py311h06a4308_0
   - xz=5.4.6=h5eee18b_0
   - zlib=1.2.13=h5eee18b_0
   - pip:
-      - absl-py==2.1.0
-      - aiohttp==3.9.3
       - aiosignal==1.3.1
-      - antlr4-python3-runtime==4.9.3
-      - appdirs==1.4.4
-      - asttokens==2.4.1
       - attrs==23.2.0
       - certifi==2024.2.2
       - cffi==1.16.0
       - charset-normalizer==3.3.2
       - click==8.1.7
-      - contourpy==1.2.0
-      - cryptography==41.0.7
-      - cycler==0.12.1
-      - datasets==2.18.0
-      - decorator==5.1.1
-      - dill==0.3.8
-      - docker-pycreds==0.4.0
-      - executing==2.0.1
+      - colorama==0.4.6
+      - cryptography==42.0.5
       - filelock==3.13.1
-      - flwr==1.7.0
-      - flwr-datasets==0.1.0
-      - fonttools==4.50.0
+      - flwr-nightly==1.8.0.dev20240315
       - frozenlist==1.4.1
-      - fsspec==2024.2.0
-      - gitdb==4.0.11
-      - gitpython==3.1.42
+      - fsspec==2024.3.1
       - grpcio==1.62.1
-      - huggingface-hub==0.21.4
-      - hydra-core==1.3.2
       - idna==3.6
-      - ipython==8.22.2
       - iterators==0.0.2
-      - jedi==0.19.1
       - jinja2==3.1.3
-      - joblib==1.3.2
       - jsonschema==4.21.1
       - jsonschema-specifications==2023.12.1
-      - kiwisolver==1.4.5
-      - markdown==3.6
+      - markdown-it-py==3.0.0
       - markupsafe==2.1.5
-      - matplotlib==3.8.3
-      - matplotlib-inline==0.1.6
+      - mdurl==0.1.2
       - mpmath==1.3.0
       - msgpack==1.0.8
-      - multidict==6.0.5
-      - multiprocess==0.70.16
       - networkx==3.2.1
       - numpy==1.26.4
       - nvidia-cublas-cu12==12.1.3.1
@@ -85,55 +62,26 @@ dependencies:
       - nvidia-nccl-cu12==2.19.3
       - nvidia-nvjitlink-cu12==12.4.99
       - nvidia-nvtx-cu12==12.1.105
-      - omegaconf==2.3.0
       - packaging==24.0
-      - pandas==2.2.1
-      - parso==0.8.3
-      - pexpect==4.9.0
       - pillow==10.2.0
-      - prompt-toolkit==3.0.43
       - protobuf==4.25.3
-      - psutil==5.9.8
-      - ptyprocess==0.7.0
-      - pure-eval==0.2.2
-      - pyarrow==15.0.1
-      - pyarrow-hotfix==0.6
       - pycparser==2.21
       - pycryptodome==3.20.0
       - pydantic==1.10.14
       - pygments==2.17.2
-      - pyparsing==3.1.2
-      - python-dateutil==2.9.0.post0
-      - pytz==2024.1
       - pyyaml==6.0.1
       - ray==2.6.3
-      - referencing==0.33.0
+      - referencing==0.34.0
       - requests==2.31.0
+      - rich==13.7.1
       - rpds-py==0.18.0
-      - scikit-learn==1.4.1.post1
-      - scipy==1.12.0
-      - sentry-sdk==1.42.0
-      - setproctitle==1.3.3
-      - six==1.16.0
-      - smmap==5.0.1
-      - stack-data==0.6.3
+      - shellingham==1.5.4
       - sympy==1.12
-      - tensorboard==2.16.2
-      - tensorboard-data-server==0.7.2
-      - tensorboardx==2.6.2.2
-      - threadpoolctl==3.3.0
+      - tomli==2.0.1
       - torch==2.2.1
-      - torchsummary==1.5.1
       - torchvision==0.17.1
-      - tqdm==4.66.2
-      - traitlets==5.14.2
       - triton==2.2.0
+      - typer==0.9.0
       - typing-extensions==4.10.0
-      - tzdata==2024.1
       - urllib3==2.2.1
-      - wandb==0.16.4
-      - wcwidth==0.2.13
-      - werkzeug==3.0.1
-      - xxhash==3.4.1
-      - yarl==1.9.4
-prefix: /home/andy/miniconda3/envs/feddc_flower
+prefix: /home/andy/miniconda3/envs/feddc_flower_nightly
