--- a/Configs/mnist.yaml
+++ b/Configs/mnist.yaml
@@ -21,6 +21,7 @@ fl:
   alpha_coef: 0.1
   learning_rate: 0.1
   print_per: 2 # For all clients, print every 2 epochs
+  seed: 42
 
 resources:
   num_cpu: 16
