--- a/env.yml
+++ b/env.yml
@@ -26,25 +26,32 @@ dependencies:
   - zlib=1.2.13=h5eee18b_0
   - pip:
       - aiosignal==1.3.1
+      - antlr4-python3-runtime==4.9.3
       - attrs==23.2.0
       - certifi==2024.2.2
       - cffi==1.16.0
       - charset-normalizer==3.3.2
       - click==8.1.7
       - colorama==0.4.6
+      - contourpy==1.2.0
       - cryptography==42.0.5
+      - cycler==0.12.1
       - filelock==3.13.1
       - flwr-nightly==1.8.0.dev20240315
+      - fonttools==4.50.0
       - frozenlist==1.4.1
       - fsspec==2024.3.1
       - grpcio==1.62.1
+      - hydra-core==1.3.2
       - idna==3.6
       - iterators==0.0.2
       - jinja2==3.1.3
       - jsonschema==4.21.1
       - jsonschema-specifications==2023.12.1
+      - kiwisolver==1.4.5
       - markdown-it-py==3.0.0
       - markupsafe==2.1.5
+      - matplotlib==3.8.3
       - mdurl==0.1.2
       - mpmath==1.3.0
       - msgpack==1.0.8
@@ -62,6 +69,7 @@ dependencies:
       - nvidia-nccl-cu12==2.19.3
       - nvidia-nvjitlink-cu12==12.4.99
       - nvidia-nvtx-cu12==12.1.105
+      - omegaconf==2.3.0
       - packaging==24.0
       - pillow==10.2.0
       - protobuf==4.25.3
@@ -69,13 +77,17 @@ dependencies:
       - pycryptodome==3.20.0
       - pydantic==1.10.14
       - pygments==2.17.2
+      - pyparsing==3.1.2
+      - python-dateutil==2.9.0.post0
       - pyyaml==6.0.1
       - ray==2.6.3
       - referencing==0.34.0
       - requests==2.31.0
       - rich==13.7.1
       - rpds-py==0.18.0
+      - scipy==1.12.0
       - shellingham==1.5.4
+      - six==1.16.0
       - sympy==1.12
       - tomli==2.0.1
       - torch==2.2.1
